--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,8 +10,26 @@
     <height>634</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>991</width>
+    <height>634</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>991</width>
+    <height>634</height>
+   </size>
+  </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+    <pointsize>10</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Optimization</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QWidget" name="gridLayoutWidget">
@@ -527,7 +545,7 @@
      <x>0</x>
      <y>0</y>
      <width>991</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
