--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -358,48 +358,10 @@
     <property name="title">
      <string>Stop criteria</string>
     </property>
-    <widget class="QRadioButton" name="epsButton">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>20</y>
-       <width>181</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>|f(x_{k+j} )- f(x_{k})| &lt; eps =</string>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
-     </property>
-     <property name="autoExclusive">
-      <bool>false</bool>
-     </property>
-    </widget>
-    <widget class="QRadioButton" name="iterButton">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>50</y>
-       <width>211</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Max iterations from last improvement =</string>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
-     </property>
-     <property name="autoExclusive">
-      <bool>false</bool>
-     </property>
-    </widget>
     <widget class="QDoubleSpinBox" name="epsSpin">
      <property name="geometry">
       <rect>
-       <x>230</x>
+       <x>240</x>
        <y>20</y>
        <width>111</width>
        <height>22</height>
@@ -424,7 +386,7 @@
     <widget class="QSpinBox" name="iterSpin">
      <property name="geometry">
       <rect>
-       <x>230</x>
+       <x>240</x>
        <y>50</y>
        <width>111</width>
        <height>22</height>
@@ -444,6 +406,43 @@
      </property>
      <property name="value">
       <number>20000</number>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="epsCheck">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>22</y>
+       <width>181</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>|f(x_{k+j} )- f(x_{k})| &lt; eps =</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="iterCheck">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>52</y>
+       <width>231</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Max iterations from last improvement =</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
@@ -545,7 +544,7 @@
      <x>0</x>
      <y>0</y>
      <width>991</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
